Bug fix: hide border of sidebar when collapsed (display:none)

--- a/css/leaflet-sidebar-tabless.css
+++ b/css/leaflet-sidebar-tabless.css
@@ -97,10 +97,14 @@
     left: 0;
     right: 0; }
   .leaflet-sidebar.collapsed > .leaflet-sidebar-content {
-    overflow-y: hidden; }
+    display: none;
+    overflow-y: hidden;
+  }
 
 .collapsed > .leaflet-sidebar-content {
-  overflow-y: hidden; }
+  display: none;
+  overflow-y: hidden;
+}
 
 .leaflet-sidebar-pane {
   display: none;
